Gnumeric 1.12.56

--------------------------------------------------------------------------
Gnumeric 1.12.55

Morten:
	* Fix problem making new objects invisble.  [#694]

--------------------------------------------------------------------------
Gnumeric 1.12.54

John Denker:
	* Improve whitespace handling in html import.  [#671]

Morten:
	* Improve various desktop environments' icon discovery.  [#677]
	* New function ENCODEURL.  [#658]
	* New libpython configuration.  [#680]
	* Fix problem relating to sheet remove and conditional format.
	* Fix inconsistent rounding of half-way cases.  [#638]
	* Fix xlsx leaks.
	* Cell comment speed-ups.  [#692]

--------------------------------------------------------------------------
Gnumeric 1.12.53

Morten:
	* Fix xlsx import of T.INV.
	* Fix inter-process array paste problem.  [#634]
	* Fix problem with xlsx number format 14.
	* Fix problems with complex number rendering.  [#638]
	* Fix near-denormal parsing case.  [#656]
	* Fix mildly crazy ROUND edge cases.  [#661]
	* Fix dialog reuse problem.  [#657]
	* Fix sc import problem.  [#663]
	* Work a little hard at avoiding -0.  [#652]
	* Fix html import problem.  [#669]
	* Fix reading localc extension for engineering format.  [#659]
	* Fix strict-conformance ods problem with E-notation.  [#672]
	* Improve test suite
	* Fix crash involving moving conditional formats.

--------------------------------------------------------------------------
Gnumeric 1.12.52

Morten:
	* Attach the vertical alignment selector to the toolbar.
	* Improve the toolbar styling a bit.
	* Fix toolbar overflow menu's labeling.
	* Many improvements to vertical toolbars.
	* Install appdata file in new location [#612]
	* Allow styling of cell extension indicators.
	* Restore bolding of active sheet tab.
	* Fix import of mildly broken print settings in xlsx files from
	  OnlyOffice.
	* Various --with-long-double fixes.
	* Fix BITAND.
	* Test improvements.